Customer Related entities created.

--- a/GloboTicket.TicketManagement.Application/GloboTicket.TicketManagement.Application.csproj
+++ b/GloboTicket.TicketManagement.Application/GloboTicket.TicketManagement.Application.csproj
@@ -18,5 +18,10 @@
   <ItemGroup>
     <ProjectReference Include="..\GloboTicket.TicketManagement.Domain\GloboTicket.TicketManagement.Domain.csproj" />
   </ItemGroup>
+	
+  <ItemGroup>
+    <Folder Include="Features\Comments\" />
+    <Folder Include="Features\Messages\Commands\" />
+  </ItemGroup>
 
 </Project>
