--- a/GloboTicket.TicketManagement.Api/GloboTicket.TicketManagement.Api.csproj
+++ b/GloboTicket.TicketManagement.Api/GloboTicket.TicketManagement.Api.csproj
@@ -18,6 +18,7 @@
 		<PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
 		<PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="5.6.3" />
+		<PackageReference Include="Syncfusion.Blazor.DropDowns" Version="25.1.35" />
 	</ItemGroup>
 
 	<ItemGroup>
