--- a/GloboTicket.TicketManagement.App/GloboTicket.TicketManagement.App.csproj
+++ b/GloboTicket.TicketManagement.App/GloboTicket.TicketManagement.App.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.1" PrivateAssets="all" />
 		<PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
 		<PackageReference Include="Microsoft.AspNetCore.Components.Authorization" Version="3.1.10" />
+		<PackageReference Include="Syncfusion.Blazor.DropDowns" Version="25.1.35" />
 		<PackageReference Include="System.Net.Http.Json" Version="3.2.0" />
 		<PackageReference Include="Microsoft.Extensions.Http" Version="3.1.4" />
 
